--- a/cockl/cockl.html
+++ b/cockl/cockl.html
@@ -17,7 +17,7 @@
     <p id="demo">JavaScript can change HTML content.
     </p>
     <p1>
-        this is a cockl
+        this is a cockl, hello github.
     </p1>
     <div><script>
         function updatecockl(){
