--- a/learning/test.html
+++ b/learning/test.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="test.js"></script>
 </head>
 <h1> Arch based</h1>
 <link rel="stylesheet" href="test.css">
@@ -14,6 +15,7 @@
     alt = "manjaro logo"
     class = "center"
 >
+<p id="this"></p>
 </img>
 </body>
 </html>
