--- a/printer_single_odd/index.html
+++ b/printer_single_odd/index.html
@@ -4,19 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Printer Single Odd</title>
+    <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
     <div class="main" id="inputf">
-        <form action="result.html">
-            <div>
-                <label for="noRange">Numbers Range</label>
-                <input type="number" name="noRange" id="noRange" value="0" placeholder="bruh">
-            </div>
-            <br><br>
-            <button type="reset">Reset</button>
-            <br><br>
-            <button type="submit">Submit</button>
-        </form>
+        <input id="noRange" placeholder="input a range in accending order eg. 6, 16">
+        <p id="output"></p>
+        <button onclick="process()"> Run</button>
     </div>
+    <script>
+        let intialise = (n) => {    //set value of array with size n to 0
+        let arr=[];
+        for(let i=0;i<n;i++){
+            arr.push(0);
+        }
+        return arr;
+        }
+        function process(){
+            var n=document.getElementById("noRange").value;
+            let reg=/\d+/g;    //extract all (+) number (maybe %d) globally(g), it is string so need to change to int
+            let range=n.match(reg);
+            let arr=intialise(0);
+            let arrr=intialise(0);
+            //document.getElementById("output").innerHTML=range;
+            for(let i=0; i<=1; i++){
+                range[i]=parseInt(range[i]); //regex from string to int
+            }
+            console.table(range);
+            console.log(range.length);
+            for(let i=range[0];i<=range[1];i++){
+                i%2 ? arr.push(i) : arrr.push(i);
+            }
+            console.table(arr);
+            console.table(arrr);
+        }
+    </script>
 </body>
 </html>
