--- a/printer_single_odd/index.html
+++ b/printer_single_odd/index.html
@@ -11,11 +11,11 @@
     <div class="main" id="inputf">
         <input id="noRange" placeholder="input a range in accending order eg. 6, 16">
         <br><br><br>
-        <textarea id="outputOdd"></textarea>
+        <textarea id="outputOdd" readonly></textarea>
         <br><br><br>
         <button onclick="copyText('outputOdd')">Copy text</button>
         <br><br><br>
-        <textarea id="outputEven"></textarea>
+        <textarea id="outputEven" readonly></textarea>
         <br><br><br>
         <button onclick="copyText('outputEven')">Copy text</button>
         <br><br><br>
