--- a/printer_single_odd/index.html
+++ b/printer_single_odd/index.html
@@ -20,7 +20,7 @@
         <button onclick="copyText('outputEven')">Copy text</button>
         <br><br><br>
         <button onclick="process()"> Run</button>
-        <input type="reset" value="Reset">
+        <!!!input type="reset" value="Reset">
     </div>
     <script>
         let intialise = (n) => {    //set value of array with size n to 0
